# deskpet

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml
docs/: macos-build.md
public/pets/corgi-tuantuan/: pet.json
public/pets/corgi-tuantuan/smooth/: manifest.json  roll-v3-manifest.json
public/pets/corgi/smooth/: roll-v3-manifest.json
public/pets/cream-dog/smooth/: manifest.json  roll-v3-manifest.json
public/pets/cream/smooth/: roll-v3-manifest.json
public/pets/dog/: source-pet.json
public/pets/dog/smooth/: manifest.json  roll-v3-manifest.json
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alarm_scheduler.rs  lib.rs  main.rs
src/lib/: bridge.ts
src/pet/: PetWindow.tsx  SpriteAnimator.ts  interaction-rules.ts  pet-game.ts  pet-manifest.ts  pet-skins.ts
src/schedule/: WeekTimeline.tsx  week-schedule.ts
src/todos/: TodoPanel.tsx
tools/: audit_smooth_assets.py  interpolate_action_sequence.py  interpolate_pet.py  interpolate_roll_sequence.py  make_icons.py  prepare_action_sequence.py  prepare_roll_sequence.py  replace_pet_rows.py
